# uaem.notas.podimag

./: Makefile  Pipfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
notas/: .gitignore  01_conceptos.ipynb  01_pythoncientifico.ipynb  02. conceptos.ipynb  02_conceptos.ipynb  03_aprendizaje_automatico.ipynb  04.Captura.ipynb  A. Ejemplo.ipynb  Rúbrica.md
notas/ejemplos/: A. Ejemplo.ipynb  A. Historieta.ipynb  B. Chroma.ipynb  C. Costuras.ipynb
notas/ejemplos/caras/: LEEME.txt
src/materiales/: __init__.py  descriptores.py  sipi.py  tipos.py
tareas/: 01_pythoncientifico.ipynb
