[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "materiales"
version = "0.1.0"
authors = [
    {name = "Mario Abarca", email = "knkillname@gmail.com"}
]
description = "Materiales para el curso de Procesamiento Digital de Imágenes"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/knkillname/uaem.notas.prodimag"